# Clippits

BG96/Pass_with_star/: Pass_with_star.ino
Examples/FullTest/: FullTest.ino
Examples/IDF/HelloScreen/: CMakeLists.txt  sdkconfig
Examples/IDF/HelloScreen/main/: idf_component.yml  main.c
Examples/IDF/ScreenArduino/: CMakeLists.txt
Examples/IDF/SerialInput/: CMakeLists.txt
Examples/IDF/SerialInput/main/: main.c
Examples/IDF/SerialMotorStart/: CMakeLists.txt
Examples/IDF/SerialMotorStart/main/: main.c
Examples/IDF/StepperMotor/: CMakeLists.txt
Examples/IDF/StepperMotor/main/: main.c
Examples/IDF/Touch/Touch/: CMakeLists.txt
Examples/LVGL_Simple/: LVGL_Simple.ino
Examples/LVGL_SimpleButton/: LVGL_SimpleButton.ino
Examples/Pass_with_star/: Pass_with_star.ino
Examples/screentests/: screentests.ino
Examples/teststepperMotor/: teststepperMotor.ino
Thermalprinter/Thermalprinter/: Thermalprinter.ino
UI/: CMakeLists.txt  UI.ino  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen3.c  ui_img_1223_png.c  ui_img_868519913.c  ui_img_ash2_png.c  ui_img_bastard3_png.c  ui_img_bastard_png.c  ui_img_clippitslogo_png.c  ui_img_logo_app_png.c  ui_img_paper_roll_png.c  ui_img_wifi_png.c
WebSocketsSetup/: steve.html
lvgl2/: CMakeLists.txt  sdkconfig  sdkconfig.old
lvgl2/main/: BasicImages.c  CMakeLists.txt  StepperMotor.c  StepperMotor.h  Thermal.c  Thermal.h  WiFi.c  WiFi.h  clippits.c  idf_component.yml  main.c  pins.h  process_x.h  touch.c  touch.h
lvgl2/main/Screens/: ImportData.c  ImportData.h  Screens.c  Screens.h  SplashScreen.h  Styles.c  Styles.h
(+12 files in other folders)
